--- a/02_derivatives.ipynb
+++ b/02_derivatives.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "ffb2c49e",
    "metadata": {},
    "outputs": [
@@ -34,20 +34,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4. 8. 8.]\n",
-      "[3. 3. 3.]\n",
-      "[1. 1. 1.]\n",
-      "[0.3535534  0.50000006 0.25      ]\n",
-      "[0.50000004 1.00000033 0.25000001]\n"
+      "pow  [4. 8. 8.]\n",
+      "pow  [12.000001 48.000001 48.000001]\n",
+      "coeff  [3. 3. 3.]\n",
+      "const  [1. 1. 1.]\n",
+      "sqrt  [0.3535534  0.50000006 0.25      ]\n",
+      "log  [0.50000004 1.00000033 0.25000001]\n"
      ]
     }
    ],
    "source": [
-    "print(deriv(func=lambda x: x**2, _input=np.array([2,4,4]))) # pow\n",
-    "print(deriv(func=lambda a: 3*a+2, _input=np.array([2,0,4]))) # coeff\n",
-    "print(deriv(func=lambda a: a+2, _input=np.array([2,0,4]))) # const\n",
-    "print(deriv(func=lambda a: np.sqrt(a), _input=np.array([2,1,4]))) # sqrt\n",
-    "print(deriv(func=lambda a: np.log(a), _input=np.array([2,1,4]))) # log"
+    "def cube(x):\n",
+    "    return x**3\n",
+    "print('pow ', deriv(func=lambda x: x**2, _input=np.array([2,4,4]))) # pow\n",
+    "print('pow ', deriv(func=cube, _input=np.array([2,4,4]))) # pow\n",
+    "print('coeff ', deriv(func=lambda a: 3*a+2, _input=np.array([2,0,4]))) # coeff\n",
+    "print('const ', deriv(func=lambda a: a+2, _input=np.array([2,0,4]))) # const\n",
+    "print('sqrt ', deriv(func=lambda a: np.sqrt(a), _input=np.array([2,1,4]))) # sqrt\n",
+    "print('log ', deriv(func=lambda a: np.log(a), _input=np.array([2,1,4]))) # log"
    ]
   }
  ],
