--- a/02_derivatives.ipynb
+++ b/02_derivatives.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "id": "ffb2c49e",
    "metadata": {},
    "outputs": [
@@ -44,13 +44,16 @@
     }
    ],
    "source": [
-    "def cube(x):\n",
-    "    return x**3\n",
+    "def cube(x): return x**3\n",
     "print('pow ', deriv(func=lambda x: x**2, _input=np.array([2,4,4]))) # pow\n",
     "print('pow ', deriv(func=cube, _input=np.array([2,4,4]))) # pow\n",
     "print('coeff ', deriv(func=lambda a: 3*a+2, _input=np.array([2,0,4]))) # coeff\n",
     "print('const ', deriv(func=lambda a: a+2, _input=np.array([2,0,4]))) # const\n",
-    "print('sqrt ', deriv(func=lambda a: np.sqrt(a), _input=np.array([2,1,4]))) # sqrt\n",
+    "class SQRT:\n",
+    "    def __call__(self, x):\n",
+    "        return x ** (1/2)\n",
+    "sq = SQRT()\n",
+    "print('sqrt ', deriv(func=sq, _input=np.array([2,1,4]))) # sqrt\n",
     "print('log ', deriv(func=lambda a: np.log(a), _input=np.array([2,1,4]))) # log"
    ]
   }
