--- a/02_derivatives.ipynb
+++ b/02_derivatives.ipynb
@@ -15,18 +15,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "id": "0057d498",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def deriv(func: Callable[ndarray, [ndarray]], _input: ndarray, delta: float=0.001) -> ndarray:\n",
+    "def deriv(func: Callable[[ndarray], ndarray], _input: ndarray, delta: float=0.001) -> ndarray:\n",
     "    return (func(_input + delta) - func(_input - delta))/ (delta * 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "id": "ffb2c49e",
    "metadata": {},
    "outputs": [
