--- a/02_derivatives.ipynb
+++ b/02_derivatives.ipynb
@@ -15,12 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "0057d498",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def deriv(func: Callable[[ndarray], ndarray], _input: ndarray, delta: float=0.001) -> ndarray:\n",
+    "def deriv(func: Callable[[ndarray], ndarray],\n",
+    "          _input: ndarray, \n",
+    "          delta: float=0.001) -> ndarray:\n",
     "    return (func(_input + delta) - func(_input - delta))/ (delta * 2)"
    ]
   },
