--- a/03_nested_functions.ipynb
+++ b/03_nested_functions.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5a6c3576",
    "metadata": {},
    "outputs": [],
@@ -28,8 +28,7 @@
     "    f1 = chain[0]\n",
     "    f2 = chain[1]\n",
     "    \n",
-    "    return f2(f1(_input))\n",
-    "    "
+    "    return f2(f1(_input))"
    ]
   },
   {
