forward and backward pass

--- a/04_chain_rule.ipynb
+++ b/04_chain_rule.ipynb
@@ -124,6 +124,60 @@
     "chain_3 = [square, cube, relu]\n",
     "print(chain_deriv_3(chain=chain_3, _input=np.array([3,7,2])))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63c0afb2",
+   "metadata": {},
+   "source": [
+    "## Forward and Backward Pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "a03664ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "forward pass:  (array([ 9, 49,  4]), array([   729, 117649,     64]), array([   729, 117649,     64]))\n",
+      "backward pass:  [  1458.00000596 100842.00040122    192.000004  ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# chain rule 3\n",
+    "array_func = Callable[[ndarray], ndarray]\n",
+    "chain = List[array_func]\n",
+    "\n",
+    "def chain_deriv_3(chain: chain, _input: ndarray) -> ndarray:\n",
+    "    assert len(chain) == 3 # 3 composite fs\n",
+    "    assert _input.ndim == 1 # 1-dim input [3,2,1]\n",
+    "    # arrange chain\n",
+    "    f1 = chain[0]\n",
+    "    f2 = chain[1]\n",
+    "    f3 = chain[2]\n",
+    "\n",
+    "    # forward pass\n",
+    "    f1x = f1(_input)\n",
+    "    f2x = f2(f1x)\n",
+    "    f3x = f3(f2x)\n",
+    "    # backward pass\n",
+    "    \n",
+    "    backprop =  deriv(f3, f2(f1(_input))) * deriv(f2, f1(_input))  * deriv(f1, _input)\n",
+    "    return ((f1x, f2x, f3x), backprop)\n",
+    "\n",
+    "def relu(x: ndarray) -> ndarray:\n",
+    "    return np.maximum(0, x)\n",
+    "\n",
+    "chain_3 = [square, cube, relu]\n",
+    "forward, backward = chain_deriv_3(chain=chain_3, _input=np.array([3,7,2]))\n",
+    "print('forward pass: ', forward)\n",
+    "print('backward pass: ', backward)"
+   ]
   }
  ],
  "metadata": {
