generalized chain rule/back,forward prop for n number of values

--- a/04_chain_rule.ipynb
+++ b/04_chain_rule.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 67,
    "id": "b1a598af",
    "metadata": {},
    "outputs": [
@@ -35,6 +35,8 @@
     "    return x ** 3\n",
     "def square(x: ndarray) -> ndarray:\n",
     "    return x ** 2\n",
+    "def relu(x: ndarray) -> ndarray:\n",
+    "    return np.maximum(0, x)\n",
     "print(deriv(func=cube, _input=np.array([3,2,0.1])))\n",
     "print(deriv(func=square, _input=np.array([3,2,0.1])))"
    ]
@@ -89,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 68,
    "id": "2e1e2f5b",
    "metadata": {},
    "outputs": [
@@ -118,9 +120,6 @@
     "    dx =  deriv(f3, f2(f1(_input))) * deriv(f2, f1(_input))  * deriv(f1, _input)\n",
     "    return dx\n",
     "\n",
-    "def relu(x: ndarray) -> ndarray:\n",
-    "    return np.maximum(0, x)\n",
-    "\n",
     "chain_3 = [square, cube, relu]\n",
     "print(chain_deriv_3(chain=chain_3, _input=np.array([3,7,2])))"
    ]
@@ -135,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 69,
    "id": "a03664ac",
    "metadata": {},
    "outputs": [
@@ -170,13 +169,60 @@
     "    backprop =  deriv(f3, f2(f1(_input))) * deriv(f2, f1(_input))  * deriv(f1, _input)\n",
     "    return ((f1x, f2x, f3x), backprop)\n",
     "\n",
-    "def relu(x: ndarray) -> ndarray:\n",
-    "    return np.maximum(0, x)\n",
-    "\n",
     "chain_3 = [square, cube, relu]\n",
     "forward, backward = chain_deriv_3(chain=chain_3, _input=np.array([3,7,2]))\n",
     "print('forward pass: ', forward)\n",
     "print('backward pass: ', backward)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c163dd3",
+   "metadata": {},
+   "source": [
+    "## Generalize for any number of functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "6ff34eeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "forward pass:  [array([ 9, 49,  4]), array([   729, 117649,     64]), array([   729, 117649,     64]), array([       387420489, 1628413597910449,           262144])]\n",
+      "backward pass:  [2.32452294e+09 4.18734928e+15 2.35929605e+06]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# chain rule 3\n",
+    "array_func = Callable[[ndarray], ndarray]\n",
+    "chain = List[array_func]\n",
+    "\n",
+    "def chain_deriv(chain: chain, _input: ndarray) -> ndarray:\n",
+    "    assert _input.ndim == 1 # 1-dim input [3,2,1]\n",
+    "\n",
+    "    # forward pass\n",
+    "    forward = [_input] # start with input, store all funcs evals\n",
+    "    for function in chain:\n",
+    "        forward.append(function(forward[-1]))\n",
+    "    \n",
+    "    # backward pass\n",
+    "    grad = 1.0 # set to 1 initially\n",
+    "    for i in range(len(chain)-1, -1,-1): # start taking deriv at last func, reverse\n",
+    "        grad = grad * deriv(chain[i], forward[i]) # find derivative\n",
+    "        \n",
+    "    return (forward[1:], grad)\n",
+    "\n",
+    "# test\n",
+    "chain_n = [square, cube, relu, cube]\n",
+    "forward_pass, backward_pass = chain_deriv(chain=chain_n, _input=np.array([3,7,2]))\n",
+    "print('forward pass: ', forward_pass)\n",
+    "print('backward pass: ', backward_pass)"
    ]
   }
  ],
