formatting of code

--- a/04_chain_rule.ipynb
+++ b/04_chain_rule.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 86,
    "id": "eb70097c",
    "metadata": {},
    "outputs": [],
@@ -13,8 +13,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "31307320",
+   "metadata": {},
+   "source": [
+    "## Derivative"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 87,
    "id": "b1a598af",
    "metadata": {},
    "outputs": [
@@ -58,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 88,
    "id": "4405f7da",
    "metadata": {},
    "outputs": [
@@ -91,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 89,
    "id": "2e1e2f5b",
    "metadata": {},
    "outputs": [
@@ -134,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 90,
    "id": "a03664ac",
    "metadata": {},
    "outputs": [
@@ -155,6 +163,7 @@
     "def chain_deriv_3(chain: chain, _input: ndarray) -> ndarray:\n",
     "    assert len(chain) == 3 # 3 composite fs\n",
     "    assert _input.ndim == 1 # 1-dim input [3,2,1]\n",
+    "    \n",
     "    # arrange chain\n",
     "    f1 = chain[0]\n",
     "    f2 = chain[1]\n",
@@ -164,8 +173,8 @@
     "    f1x = f1(_input)\n",
     "    f2x = f2(f1x)\n",
     "    f3x = f3(f2x)\n",
-    "    # backward pass\n",
     "    \n",
+    "    # backward pass\n",
     "    backprop =  deriv(f3, f2(f1(_input))) * deriv(f2, f1(_input))  * deriv(f1, _input)\n",
     "    return ((f1x, f2x, f3x), backprop)\n",
     "\n",
@@ -185,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 91,
    "id": "6ff34eeb",
    "metadata": {},
    "outputs": [
@@ -199,7 +208,6 @@
     }
    ],
    "source": [
-    "# chain rule 3\n",
     "array_func = Callable[[ndarray], ndarray]\n",
     "chain = List[array_func]\n",
     "\n",
@@ -212,7 +220,7 @@
     "        forward.append(function(forward[-1]))\n",
     "    \n",
     "    # backward pass\n",
-    "    grad = 1.0 # set to 1 initially\n",
+    "    grad = 1.0 # set to 1 initially, all other will multiply to this \n",
     "    for i in range(len(chain)-1, -1,-1): # start taking deriv at last func, reverse\n",
     "        grad = grad * deriv(chain[i], forward[i]) # find derivative\n",
     "        \n",
