--- a/04_chain_rule.ipynb
+++ b/04_chain_rule.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 2,
    "id": "eb70097c",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 3,
    "id": "b1a598af",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 4,
    "id": "4405f7da",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 5,
    "id": "2e1e2f5b",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 6,
    "id": "a03664ac",
    "metadata": {},
    "outputs": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 7,
    "id": "6ff34eeb",
    "metadata": {},
    "outputs": [
@@ -217,7 +217,7 @@
     "    # forward pass\n",
     "    forward = [_input] # start with input, store all funcs evals\n",
     "    for function in chain:\n",
-    "        forward.append(function(forward[-1]))\n",
+    "        forward.append(function(forward[-1])) # evaluate funcs\n",
     "    \n",
     "    # backward pass\n",
     "    grad = 1.0 # set to 1 initially, all other will multiply to this \n",
