functions with multiple inputs

--- a/05_multiple_inputs.ipynb
+++ b/05_multiple_inputs.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "e2d5760c",
    "metadata": {},
    "outputs": [
@@ -141,9 +141,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "forward:  [0.99966465 0.73105858 0.99999989]\n",
-      "backward:  (array([1.34095091e-03, 1.96611927e-01, 4.50140814e-07]), array([6.70475453e-04, 1.96611927e-01, 4.50140814e-07]))\n"
+      "forward:  [0.99966465 0.73105858 0.99999989]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'backward: '"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([1.34095091e-03, 1.96611927e-01, 4.50140814e-07]),\n",
+       " array([6.70475453e-04, 1.96611927e-01, 4.50140814e-07]),\n",
+       " array([3.35237727e-04, 1.96611927e-01, 1.12535203e-07]),\n",
+       " array([ 8,  1, 16]))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
