derivative updated with Forward difference

--- a/05_multiple_inputs.ipynb
+++ b/05_multiple_inputs.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "id": "b1a598af",
    "metadata": {},
    "outputs": [
@@ -30,17 +30,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[27.000001 12.000001  0.030001]\n",
-      "[6.  4.  0.2]\n",
+      "[27.009001 12.006001  0.030301]\n",
+      "[6.001 4.001 0.201]\n",
       "[1. 1. 1.]\n",
-      "[0.04517667 0.10499359 0.24937602]\n"
+      "[0.04515622 0.10495361 0.24936979]\n"
      ]
     }
    ],
    "source": [
     "# derivative\n",
     "def deriv(func: Callable[[ndarray], ndarray], _input: ndarray, delta:float=0.001) -> ndarray:\n",
-    "    return (func(_input + delta) - func(_input - delta)) / (delta * 2)\n",
+    "    return (func(_input + delta) - func(_input)) / delta\n",
     "def cube(x: ndarray) -> ndarray:\n",
     "    return x ** 3\n",
     "def square(x: ndarray) -> ndarray:\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 57,
    "id": "4405f7da",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 58,
    "id": "5a832a0d",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 59,
    "id": "9e26daee",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
      "output_type": "stream",
      "text": [
       "forward:  [0.99752738 0.88079708 0.99966465]\n",
-      "backward:  (array([0.00246651, 0.10499359, 0.00033524]), array([0.00246651, 0.10499359, 0.00033524]))\n"
+      "backward:  (array([0.00246528, 0.10495361, 0.00033507]), array([0.00246528, 0.10495361, 0.00033507]))\n"
      ]
     }
    ],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 60,
    "id": "e2d5760c",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
      "output_type": "stream",
      "text": [
       "forward:  [0.99966465 0.73105858 0.99999989]\n",
-      "backward:  (array([1.34095091e-03, 1.96611927e-01, 4.50140814e-07]), array([6.70475453e-04, 1.96611927e-01, 4.50140814e-07]))\n"
+      "backward:  (array([1.34028088e-03, 1.96566498e-01, 4.49915660e-07]), array([6.70140440e-04, 1.96566498e-01, 4.49915660e-07]))\n"
      ]
     }
    ],
