--- a/07_multiple_vector_input_backward.ipynb
+++ b/07_multiple_vector_input_backward.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "247ad6c8",
    "metadata": {},
    "outputs": [
@@ -38,6 +38,7 @@
     "\n",
     "# x , a row vector\n",
     "x = np.array([[4,2,1]])\n",
+    "# w , a col vector\n",
     "w = np.array([[8], [5], [4]])\n",
     "print(x.shape)\n",
     "print(w.shape)\n",
