--- a/chp2/01_linear_regression_forward.ipynb
+++ b/chp2/01_linear_regression_forward.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "id": "e2c4b5eb",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "id": "70e30005",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,10 @@
     "    P = N + weights['B']\n",
     "    \n",
     "    # calculate loss\n",
+    "    # method 1\n",
     "    loss = np.mean(np.power(y_batch - P, 2))\n",
+    "    # method 2\n",
+    "    # loss = np.sum(np.power(y_batch - P, 2))/(2*len(X_batch))\n",
     "    \n",
     "    # save forward pass info\n",
     "    forward_info: Dict[str, ndarray] = {}\n",
@@ -46,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 15,
    "id": "4e9e9826",
    "metadata": {},
    "outputs": [
@@ -107,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 16,
    "id": "485d3a1c",
    "metadata": {},
    "outputs": [
