--- a/chp2/01_linear_regression.ipynb
+++ b/chp2/01_linear_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 123,
    "id": "e2c4b5eb",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 124,
    "id": "70e30005",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 125,
    "id": "4e9e9826",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 126,
    "id": "d98d40cf",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 127,
    "id": "29b17b92",
    "metadata": {},
    "outputs": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 128,
    "id": "00bce570",
    "metadata": {},
    "outputs": [],
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 129,
    "id": "42739199",
    "metadata": {},
    "outputs": [
@@ -518,17 +518,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 130,
    "id": "ed8567fd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x19f3c5bd1d0>]"
+       "[<matplotlib.lines.Line2D at 0x19f3cec5d10>]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 131,
    "id": "cf06c8f8",
    "metadata": {},
    "outputs": [
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 132,
    "id": "c31b5305",
    "metadata": {},
    "outputs": [
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 133,
    "id": "c4418327",
    "metadata": {},
    "outputs": [
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 134,
    "id": "e69354a8",
    "metadata": {},
    "outputs": [
